styles.css
@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Dosis:wght@500&display=swap');

/* *{
  border: solid 1px;
} */
html{
    font-family: 'Dosis', sans-serif;
    color: #9e5258;
    background-color: #FFD9DA;
    font-size: 20px;
    margin: 0;
    padding: 0;
}
header{
    margin: 0;
    padding: 0;
    color: #cc7178;
}
h1{
  margin-top: 150px;
  padding-top: 20px;
}

h2{
  font-family: 'Amatic SC', cursive;
  font-size: 35px;
  color: #79021F;
  background-color: #AAEE99;
  text-align: center;
  padding: 0px;
  margin: 7px;
}
.name{
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-evenly;
    font-size: 200px;
    border-bottom: solid;
    border-color: #AAEE99;
    border-width: 10px;
    font-family: 'Amatic SC', cursive;
    line-height: 0px;
    height: 350px;
    background-color: #ddffaa;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120' viewBox='0 0 120 120'%3E%3Cpolygon fill='%23AE9' points='120 120 60 120 90 90 120 60 120 0 120 0 60 60 0 0 0 60 30 90 60 120 120 120 '/%3E%3C/svg%3E");
    
}
.bunting{
  display: flex;
}
.bunting img{
  /* object-fit: cover; */
  width: 33%;
  height: 100px;
  padding: 0;
  margin: 0;
}
div.nav-bar nav{
  background-color: #AAEE99;
  border-style: solid; 
  border-color: #AAEE99;
  font-size: 25px;
  padding-left: 5px;
  padding-right: 5px;
  padding-bottom: 2px;
  width: 33%;
  height: 40px;
  display: flex;
  justify-content: space-around;
}
div.nav-bar{
  display: flex;
  justify-content: center;
  padding: 0px;
}
.content{
  display: flex;
  flex-wrap: no wrap;
  flex-direction: row;
  justify-content: space-between;
  /* border: solid #cc7178 20px; */
}
.profile-pic{
  display: flex;
  justify-content: center;
  height: 300px;
  border: dotted #AAEE99 10px;
  flex-grow: 1;
  padding: 5px;
  border-radius: 50%;
}
.words{
  display: flex;
  align-items: flex-start;
  /* border:solid #cc7178 2px; */
  padding-left: 30px;
  padding-right: 30px;
  padding-top: 10px;
  padding-bottom: 10px;
  flex-grow: 2;
  text-align: center;
  line-height: 40px;
  margin: 0px;
}
.side-bar{
  display: flex;
  flex-direction: column;
  background-color: #cc7178;
  width: 300px;
  flex-basis: 300px;
  flex-grow: 1;
  flex-shrink: 0;
  justify-content: flex-start;
  align-content: center;
  padding-left: 25px;
  padding-right: 25px;
  border: dotted #AAEE99 10px;
  /* border-top: dotted #AAEE99 10px; */
  flex-grow: 1;
  margin: 10px;
}
.wip{
  height: 40px;
  width: 40px;
}
footer{
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-between;
  height: 80px;
  border-top: solid;
  border-color:#AAEE99;
  border-width: 10px;
  background-color: #ddffaa;;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120' viewBox='0 0 120 120'%3E%3Cpolygon fill='%23AE9' points='120 120 60 120 90 90 120 60 120 0 120 0 60 60 0 0 0 60 30 90 60 120 120 120 '/%3E%3C/svg%3E");

}
.socials-box{
  display: flex;
  justify-content: center;
  /* align-self: flex-start; */
  /* flex-grow: 1; */
  margin:2px;
  padding: 0;
  /* flex-basis: 33%; */
}
.friend{
  margin: 2px;
}
.socials{
  display: flex;
  align-self: center;
  height: 30px;
  padding-left: 35px;
  padding-right: 35px;
}
.attribute{
  display: flex;
  align-self: center;
  /* flex-grow: 1; */
  margin:2px;
  padding: 0;;

}
.freepik{
  font-size: 15px;
  margin: 0;
}

nav a{
    color: #79021F;
    font-family: 'Amatic SC', cursive;
    font-size: 35px;
    
}
/* unvisited link */
a:link {
    color: #79021F;
  }
  
  /* visited link */
  a:visited {
    color: #79021F;
  }
  
  /* mouse over link */
  a:hover {
    color: #cc7178;
  }
  
  /* selected link */
  a:active {
    color: #c7e6b7;
  }

